[gd_scene load_steps=34 format=3 uid="uid://dg8wv16gbej83"]

[ext_resource type="Script" path="res://scenes/player/scripts/player.gd" id="1_yys4o"]
[ext_resource type="Script" path="res://scenes/player/scripts/testlabel.gd" id="2_brick"]
[ext_resource type="Texture2D" uid="uid://ydnc7w73na35" path="res://sprites/characters/PlayerSprite02.png" id="2_kk6tp"]
[ext_resource type="Script" path="res://00_Globals/MovementController.gd" id="2_w3vrm"]
[ext_resource type="Script" path="res://scenes/player/scripts/PlayerStateMachine.gd" id="3_ect42"]
[ext_resource type="Texture2D" uid="uid://saa7bfolr5lw" path="res://sprites/characters/AttackSprite01.png" id="3_eugiw"]
[ext_resource type="Texture2D" uid="uid://ct3x8g40fde0k" path="res://sprites/characters/Shadow.png" id="3_tm513"]
[ext_resource type="Script" path="res://scenes/player/scripts/state_idle.gd" id="4_bwn5c"]
[ext_resource type="Script" path="res://scenes/player/scripts/state_walk.gd" id="5_flkvy"]
[ext_resource type="Script" path="res://scenes/player/scripts/state_attack.gd" id="6_ls4ux"]
[ext_resource type="AudioStream" uid="uid://b6jxg2m4mbmiv" path="res://audio/SwordSwoosh.wav" id="8_gosf7"]
[ext_resource type="PackedScene" uid="uid://k147lo51ey8x" path="res://scenes/general/hurtbox/hurtbox.tscn" id="10_jghap"]
[ext_resource type="Script" path="res://scenes/player/scripts/PlayerInteractionHost.gd" id="10_u5fp1"]
[ext_resource type="Script" path="res://scenes/player/scripts/PlayerCamera.gd" id="11_kyg3e"]

[sub_resource type="Animation" id="Animation_hgovc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aj67m"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2hc1u"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mbn02"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_85p4n"]
resource_name = "no_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ju0rw"]
_data = {
"RESET": SubResource("Animation_hgovc"),
"attack_down": SubResource("Animation_aj67m"),
"attack_side": SubResource("Animation_2hc1u"),
"attack_up": SubResource("Animation_mbn02"),
"no_attack": SubResource("Animation_85p4n")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kncys"]
radius = 20.0

[sub_resource type="Animation" id="Animation_83ssf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_m1tjo"]
resource_name = "attack_down"
length = 0.3
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 17)]
}

[sub_resource type="Animation" id="Animation_ysi0g"]
resource_name = "attack_side"
length = 0.3
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, 0)]
}

[sub_resource type="Animation" id="Animation_5odig"]
resource_name = "attack_up"
length = 0.3
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -22)]
}

[sub_resource type="Animation" id="Animation_ebyf6"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_roxhq"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_wipr1"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_7sy6u"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_4bylg"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_61e3b"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gebb8"]
_data = {
"RESET": SubResource("Animation_83ssf"),
"attack_down": SubResource("Animation_m1tjo"),
"attack_side": SubResource("Animation_ysi0g"),
"attack_up": SubResource("Animation_5odig"),
"idle_down": SubResource("Animation_ebyf6"),
"idle_side": SubResource("Animation_roxhq"),
"idle_up": SubResource("Animation_wipr1"),
"walk_down": SubResource("Animation_7sy6u"),
"walk_side": SubResource("Animation_4bylg"),
"walk_up": SubResource("Animation_61e3b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyl6c"]
size = Vector2(18.6168, 11.8651)

[node name="Player" type="CharacterBody2D"]
collision_mask = 17
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_yys4o")
metadata/_edit_group_ = true

[node name="TestLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("2_brick")

[node name="MovementController" type="Node" parent="."]
script = ExtResource("2_w3vrm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kk6tp")
hframes = 16
vframes = 3

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.0470588, 0.0470588, 0.0470588, 0.509804)
show_behind_parent = true
position = Vector2(0, 19)
texture = ExtResource("3_tm513")

[node name="AttackEffectSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(13, 0)
texture = ExtResource("3_eugiw")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/AttackEffectSprite"]
libraries = {
"": SubResource("AnimationLibrary_ju0rw")
}
autoplay = "no_attack"

[node name="AttackHurtbox" parent="Sprite2D" instance=ExtResource("10_jghap")]
unique_name_in_owner = true
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtbox"]
visible = false
shape = SubResource("CircleShape2D_kncys")
debug_color = Color(0.995827, 0.0569411, 5.77569e-07, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gebb8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
scale = Vector2(0.96687, -0.674246)
shape = SubResource("RectangleShape2D_eyl6c")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_ect42")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_bwn5c")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_flkvy")
move_speed = 450.0

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_ls4ux")
attack_sound = ExtResource("8_gosf7")
dash_speed = 4.0

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.03
drag_top_margin = 0.03
drag_right_margin = 0.03
drag_bottom_margin = 0.03
editor_draw_limits = true
script = ExtResource("11_kyg3e")

[node name="Node" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Node"]
max_polyphony = 4

[node name="Interaction" type="Node2D" parent="."]
script = ExtResource("10_u5fp1")
